name:          buzz
version:       0.0.1
synopsis:      A playground for functional programming for Internet of Things
license:       BSD3
license-file:  LICENSE
author:        Tuura authors (see AUTHORS file)
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Tuura authors (see AUTHORS file), 2016
homepage:      https://github.com/tuura/buzz
category:      Language
build-type:    Simple
cabal-version: >=1.10

source-repository head
    type:     git
    location: https://github.com/tuura/buzz.git

library
    hs-source-dirs:   src
    exposed-modules:  Tuura.Buzz
    build-depends:    base >= 4.7 && < 5,
                      mtl == 2.2.*,
                      transformers >= 0.4 && < 0.6
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs
    
executable concept-simulate
    main-is:          Main.hs
    build-depends:    base >= 4.7 && < 5,
                      buzz
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs

test-suite concepts-test
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4.7 && < 5,  
                      buzz
    default-language: Haskell2010
    GHC-options:      -Wall -fwarn-tabs
